--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
   ],
   "devDependencies": {
     "angular": "~1.2.14",
-    "angular-route": "~1.2.14"
+    "angular-route": "~1.2.14",
+    "bootstrap": "latest",
+    "lodash": "latest"
   }
 }
 
