Update things for Karma testing (unit)

--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,11 @@
   "devDependencies": {
     "angular": "~1.2.14",
     "angular-route": "~1.2.14",
+    "angular-mocks": "latest",
     "bootstrap": "latest",
     "lodash": "latest"
+  },
+  "resolutions": {
+    "angular": "1.2.16"
   }
 }
-
