--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "gulp-util": "~2.2.14",
     "gulp-if": "~0.0.5",
     "gulp-jade": "~0.4.2",
-    "gulp-less": "~1.2.3"
+    "gulp-less": "~1.2.3",
+    "karma": "^0.12.1",
+    "karma-jasmine": "^0.1.5",
+    "karma-chrome-launcher": "^0.1.2"
   }
 }
