--- a/bower.json
+++ b/bower.json
@@ -15,13 +15,11 @@
     "tests"
   ],
   "devDependencies": {
-    "angular": "~1.2.14",
-    "angular-route": "~1.2.14",
+    "angular": "latest",
+    "angular-route": "latest",
     "angular-mocks": "latest",
+    "angular-bootstrap": "latest",
     "bootstrap": "latest",
     "lodash": "latest"
-  },
-  "resolutions": {
-    "angular": "1.2.16"
   }
 }
