--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-if": "~0.0.5",
     "gulp-jade": "~0.4.2",
     "gulp-less": "~1.2.3",
+    "gulp-watch": "~0.6.5",
     "karma": "^0.12.1",
     "karma-jasmine": "^0.1.5",
     "karma-chrome-launcher": "^0.1.2"
