--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "angular-route": "latest",
     "angular-mocks": "latest",
     "angular-bootstrap": "latest",
-    "bootstrap": "latest",
-    "lodash": "latest",
+    "flat-ui-official": "latest",
+    "lodash": "latest"
   }
 }
